change ProductMapper